==> linumiz/zephyr/drivers/gpio/gpio_mspm0.c <==
#define DT_DRV_COMPAT ti_mspm0_gpio
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/gpio/gpio_utils.h>
#include <zephyr/irq.h>
#include <soc.h>
#include <ti/driverlib/dl_gpio.h>
#define GPIOA_NODE DT_NODELABEL(gpioa)
#define NUM_GPIOA_PIN 32
#define gpioa_pins    NUM_GPIOA_PIN
#define GPIOA_NODE DT_NODELABEL(gpioa)
#define NUM_GPIOA_PIN 31
#define gpioa_pins    NUM_GPIOA_PIN
#define GPIOA_NODE DT_NODELABEL(gpioa)
#define NUM_GPIOA_PIN 30
#define gpioa_pins    NUM_GPIOA_PIN
#define GPIOB_NODE DT_NODELABEL(gpiob)
#define NUM_GPIOB_PIN 28
#define gpiob_pins    NUM_GPIOB_PIN
#define GPIOB_NODE DT_NODELABEL(gpiob)
#define NUM_GPIOB_PIN 32
#define gpiob_pins    NUM_GPIOB_PIN
#define GPIOC_NODE DT_NODELABEL(gpioc)
#define NUM_GPIOC_PIN 10
#define gpioc_pins    NUM_GPIOC_PIN

static int gpio_mspm0_port_get_raw(const struct device *port, uint32_t *value)
{
	const struct gpio_mspm0_config *config = port->config;

	/* Read entire port */
	*value = DL_GPIO_readPins(config->base, UINT32_MAX);

	return 0;
}

static int gpio_mspm0_port_set_masked_raw(const struct device *port, uint32_t mask, uint32_t value)
{
	const struct gpio_mspm0_config *config = port->config;

	DL_GPIO_writePinsVal(config->base, mask, value);

	return 0;
}

static int gpio_mspm0_port_set_bits_raw(const struct device *port, uint32_t mask)
{
	const struct gpio_mspm0_config *config = port->config;

	DL_GPIO_setPins(config->base, mask);

	return 0;
}

static int gpio_mspm0_port_clear_bits_raw(const struct device *port, uint32_t mask)
{
	const struct gpio_mspm0_config *config = port->config;

	DL_GPIO_clearPins(config->base, mask);

	return 0;
}

static int gpio_mspm0_port_toggle_bits(const struct device *port, uint32_t mask)
{
	const struct gpio_mspm0_config *config = port->config;

	DL_GPIO_togglePins(config->base, mask);

	return 0;
}

static int gpio_mspm0_pin_interrupt_configure(const struct device *port, gpio_pin_t pin,
					      enum gpio_int_mode mode, enum gpio_int_trig trig)
{
	const struct gpio_mspm0_config *config = port->config;

	/* Config interrupt */
	switch (mode) {
	case GPIO_INT_MODE_DISABLED:
		DL_GPIO_clearInterruptStatus(config->base, BIT(pin));
		DL_GPIO_disableInterrupt(config->base, BIT(pin));
		break;
	case GPIO_INT_MODE_EDGE:
		uint32_t polarity = 0x00;

		if (trig & GPIO_INT_TRIG_LOW) {
			polarity |= BIT(0);
		}
		if (trig & GPIO_INT_TRIG_HIGH) {
			polarity |= BIT(1);
		}
		if (pin < 16) {
			DL_GPIO_setLowerPinsPolarity(config->base, polarity << (2 * pin));
		} else {
			DL_GPIO_setUpperPinsPolarity(config->base, polarity << (2 * (pin - 16)));
		}
		DL_GPIO_clearInterruptStatus(config->base, BIT(pin));
		DL_GPIO_enableInterrupt(config->base, BIT(pin));
		break;
	case GPIO_INT_MODE_LEVEL:
		return -ENOTSUP;
	}

	return 0;
}

static uint32_t gpio_mspm0_get_pending_int(const struct device *port)
{
	const struct gpio_mspm0_config *config = port->config;

	return DL_GPIO_getPendingInterrupt(config->base);
}

static int gpio_mspm0_init(const struct device *port)
{
	/* Reset and enable GPIO banks */
	DL_GPIO_reset(GPIOA);
//	DL_GPIO_reset(GPIOB);

	DL_GPIO_enablePower(GPIOA);
//	DL_GPIO_enablePower(GPIOB);

	if (init_irq) {

		init_irq = false;

#if DT_NODE_HAS_STATUS(DT_NODELABEL(gpiob), okay)
		IRQ_CONNECT(DT_IRQN(GPIOB_NODE), DT_IRQ(GPIOB_NODE, priority), gpio_mspm0_isr,
			    DEVICE_DT_GET(GPIOB_NODE), 0);
		irq_enable(DT_IRQN(GPIOB_NODE));
#elif DT_NODE_HAS_STATUS(DT_NODELABEL(gpioa), okay)
		IRQ_CONNECT(DT_IRQN(GPIOA_NODE), DT_IRQ(GPIOA_NODE, priority), gpio_mspm0_isr,
			    DEVICE_DT_GET(GPIOA_NODE), 0);
		irq_enable(DT_IRQN(GPIOA_NODE));
#elif DT_NODE_HAS_STATUS(DT_NODELABEL(gpioc), okay)
		IRQ_CONNECT(DT_IRQN(GPIOC_NODE), DT_IRQ(GPIOC_NODE, priority), gpio_mspm0_isr,
			    DEVICE_DT_GET(GPIOC_NODE), 0);
		irq_enable(DT_IRQN(GPIOC_NODE));
#endif
	}

	return 0;
}
